# httpclient-cpp

./: .gitignore  CMakeLists.txt  README.md
HTTP/: CMakeLists.txt  CurlHandle.cpp  CurlHandle.h  HTTPClient.cpp  HTTPClient.h
TestHTTP/: CMakeLists.txt  CodeCoverage.cmake  main.cpp  template_test_conf.ini  test_utils.cpp  test_utils.h
